Fixed overflow-x

--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-html {
-  overflow-x: hidden;
-}
-
 body {
   width: 100vw;
   margin: 0px;
+
+  overflow-x: hidden;
 }
 
 img {
